# portframe-skills

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
mcp-server/: README.md  pyproject.toml
mcp-server/src/portframe_mcp/: __main__.py  config.py  install.py  server.py
scripts/: setup-cursor-sandbox.py
skills/portframe/: SKILL.md
skills/portframe/scripts/: auth.py
