[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "portframe-mcp"
version = "1.0.0"
description = "PortFrame AI portfolio management MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MGi Strategies", email = "dev@portframe.com" },
]
keywords = ["mcp", "portfolio", "finance", "investing", "portframe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
portframe-mcp = "portframe_mcp.server:main"

[project.urls]
Homepage = "https://portframe.com"
Repository = "https://github.com/MGi-Strategies/portframe-skills"
